--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.6
   modal_progress_hud: ^0.1.3
   font_awesome_flutter: ^9.0.0
+  firebase_dynamic_links: ^2.0.5
 
 dev_dependencies:
   flutter_test:
