--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   font_awesome_flutter: ^9.0.0
   firebase_dynamic_links: ^2.0.5
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
