--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   lottie: ^1.0.1
   provider: ^5.0.0
   circular_countdown_timer: ^0.2.0
+  social_share: ^2.1.1
 
 
 dev_dependencies:
