--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^5.0.0
   circular_countdown_timer: ^0.2.0
   social_share: ^2.1.1
+  email_auth: ^0.0.1+4
 
 
 dev_dependencies:
