--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   social_share: ^2.1.1
   responsive_framework: ^0.1.2
   feature_discovery: ^0.14.0
+  just_audio: ^0.9.0
 
 dev_dependencies:
   flutter_test:
