--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   responsive_framework: ^0.1.2
   feature_discovery: ^0.14.0
   just_audio: ^0.9.0
+  shimmer: ^2.0.0
+  image_picker: ^0.8.3+2
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
