--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,19 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.restaurant.challenge.app">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
    <application
         android:label="Hungry Game"
         android:icon="@mipmap/ic_launcher">
-       <provider
-           android:name="androidx.core.content.FileProvider"
-           android:authorities="${applicationId}.com.shekarmudaliyar.social_share"
-           android:exported="false"
-           android:grantUriPermissions="true"
-           tools:replace="android:authorities">
-           <meta-data
-               android:name="android.support.FILE_PROVIDER_PATHS"
-               android:resource="@xml/filepaths" />
-       </provider>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
