--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+2
+version: 2.4.1+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,10 +14,10 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   firebase_core: ^1.2.1
-  firebase_auth: ^3.0.2
-#  cloud_firestore: ^2.2.0
+  firebase_auth: ^1.3.0
+  cloud_firestore: ^2.2.1
   firebase_database: ^7.1.0
-  firebase_storage: ^10.0.2
+  firebase_storage: ^8.1.1
   http: ^0.13.3
   shared_preferences: ^2.0.6
   modal_progress_hud: ^0.1.3
@@ -26,13 +26,14 @@ dependencies:
   lottie: ^1.0.1
   provider: ^5.0.0
   circular_countdown_timer: ^0.2.0
-  social_share: ^2.1.1
+  share: ^2.0.4
   responsive_framework: ^0.1.2
   feature_discovery: ^0.14.0
   just_audio: ^0.9.0
   shimmer: ^2.0.0
   image_picker: ^0.8.3+2
   fluttertoast: ^8.0.8
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
